fix styling on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,8 +116,14 @@ main#content ul#posts {
 }
 
 main#content ul#posts li {
+    display: flex;
     margin: 5px 0;
     padding: 0;
+}
+
+main#magic-box-i-am-bad-at-css {
+    display: flex;
+    flex-flow: row;
 }
 
 main#content ul#posts small {
@@ -127,7 +133,11 @@ main#content ul#posts small {
 }
 
 main#content ul#posts li a {
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
     text-decoration: none;
+    align-items: center;
 }
 
 main#content ul#posts li a:hover {
@@ -285,6 +295,10 @@ footer {
 }
 */
 
+#wip {
+    margin-left: 5px;
+}
+
 footer#footer {
     font-size: 14px;
     font-size: 1.4rem;
@@ -305,12 +319,10 @@ footer#footer #sign-key {
 }
 
 #badge {
+    margin-left: 5px;
     background-color: #f2eeeb;
     border-radius: 8px;
-    padding: 0.2em;
     color: #e77c1e;
-    padding-top: 0.05em;
-    padding-bottom: 0.05em;
-    margin: block;
     font-size: 80%;
+    height: 10%;
 }
